--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "expo": "41",
     "expo-constants": "~10.1.3",
     "expo-status-bar": "~1.2.0",
@@ -25,7 +26,8 @@
     "react-native-web": "0.17.1",
     "react-navigation": "4",
     "react-navigation-drawer": "^2.7.2",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
