--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "expo": "41",
     "expo-constants": "~10.1.3",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
