--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "expo": "41",
     "expo-constants": "~10.1.3",
+    "expo-image-manipulator": "~9.1.0",
     "expo-image-picker": "~10.1.4",
     "expo-mail-composer": "~10.1.2",
+    "expo-media-library": "~12.0.2",
     "expo-notifications": "~0.11.6",
     "expo-permissions": "~12.0.1",
     "expo-secure-store": "~10.1.0",
